--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -4,13 +4,12 @@
   <h2>List of Games to Approve</h2>
   <hr>
 
-  <%=  %>
-  <%=  %>
+  <% games_for_review = Status.find_by_name("Under Review").games %>
+  <% games_for_review.each do |game| %>
+    <div>
+      <div><%= link_to game.title, game_path(game)%></div>
+      <div><%= game.user.company %></div>
+      <hr>
+    </div>
+  <% end %>
 <% end %>
-
-
-released
-not release
-under review
-not compatible
-rejected
