Changed navbar on login

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,9 +5,9 @@
   <div id="home-slideshow" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#home-slideshow" data-slide-to="0" class="active"></li>
+      <li data-target="#home-slideshow" data-slide-to="1"></li>
+      <li data-target="#home-slideshow" data-slide-to="2"></li>
     </ol>
 
 
@@ -28,7 +28,7 @@
 
 
 <div class = "home-intro">
-  <div class="container">
+  <div >
     <br>
     <br>
     <h1>Welcome to Indie Arcade</h1>
