--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -8,9 +8,9 @@
   <h1 id="team-text">Meet the team behind this initiative</h1>
   <div class="container">
     <div class="row">
-      <div class="col-md-3"><div id="rod1" class="rod-photo"></div><h4>Roderick Fung<br>aka "Sleeping Beauty"</h4></div>
-      <div class="col-md-3"><div id="rod2" class="rod-photo"></div><h4>Roderick Fung<br>aka "Sleeping Beauty"</h4></div>
-      <div class="col-md-3"><div id="rod3" class="rod-photo"></div><h4>Roderick Fung<br>aka "Sleeping Beauty"</h4></div>
+      <div class="col-md-3"><div id="rod1" class="rod-photo"></div><h4>Roderick Fung<br>aka "Party Boy"</h4></div>
+      <div class="col-md-3"><div id="rod2" class="rod-photo"></div><h4>Roderick Fung<br>aka "Duck Face"</h4></div>
+      <div class="col-md-3"><div id="rod3" class="rod-photo"></div><h4>Roderick Fung<br>aka "Macho Man"</h4></div>
       <div class="col-md-3"><div id="rod4" class="rod-photo"></div><h4>Roderick Fung<br>aka "Sleeping Beauty"</h4></div>
     </div>
   </div>
