--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,6 @@
     <br>
     <h1>Welcome to Indie Arcade</h1>
     <br>
-    <br>
     <div class="col-lg-8 col-lg-offset-2">
       We provide a unique and free gaming experience for arcades around Vancouver. This project showcases Indie games made locally in British Columbia to the general public. Our app will enable Game Developers to receieve diagnostics and reviews from the public after they play the game!
     </div>
@@ -49,7 +48,7 @@
 </div>
 
 <div class = "home-map">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2602.8146115334225!2d-123.12360358469927!3d49.279909979330995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486717e2b2312ad%3A0x6e114250e5ff0091!2sMovieland+Arcade!5e0!3m2!1sen!2sca!4v1473538365086" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2602.8146115334225!2d-123.12360358469927!3d49.279909979330995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486717e2b2312ad%3A0x6e114250e5ff0091!2sMovieland+Arcade!5e0!3m2!1sen!2sca!4v1473538365086" width="100%" height="450" frameborder="0" style="border:10px" allowfullscreen></iframe>
 </div>
 
 <!-- Social Media -->
@@ -62,25 +61,29 @@
             <ul class="list-inline text-center">
                 <li>
                   <span class="fa-stack fa-lg">
-                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <a href = "http://www.twitter.com"><i class="fa fa-circle fa-stack-2x"></i>
                       <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                      </a>
                 </li>
                 <li>
                   <span class="fa-stack fa-lg">
-                      <i class="fa fa-circle fa-stack-2x"></i>
-                      <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                    <a href = "http://www.facebook.com"><i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                    </a>
                   </span>
                 </li>
                 <li>
                   <span class="fa-stack fa-lg">
-                      <i class="fa fa-circle fa-stack-2x"></i>
-                      <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                    <a href = "http://www.instagram.com"><i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                    </a>
                   </span>
                 </li>
                 <li>
                   <span class="fa-stack fa-lg">
-                      <i class="fa fa-circle fa-stack-2x"></i>
-                      <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                    <a href = "http://www.youtube.com"><i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                    </a>
                   </span>
                 </li>
             </ul>
