--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
     <body>
 
         <!-- NAV BAR -->
-        <nav class="navbar navbar-custom navbar-fixed-top">
-            <div class="container-fluid">
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid" id="nav-wrapper">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -33,18 +33,15 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <%= link_to "Games", root_path %>
+                            <%= link_to "Games", games_path %>
                         </li>
                         <% if user_signed_in? %>
+
                         <li>
-                            <%= link_to "Log-in", root_path %>
-                        </li>
-                        <li>
-                            <%= link_to "Register", root_path %>
                             <a>Welcome, <%= current_user.company %></a>
                         </li>
                           <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="color: white" aria-expanded="false"><span class="caret"></span>My Profile</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span>My Profile</a>
                             <ul class="dropdown-menu">
                               <!-- add stuff later. Need different menues for admin vs dev -->
                               <li><%= link_to "Some Stuff", home_index_path %></li>
