--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<hr>
+
 <!-- IMAGE CAROUSEL -->
 <div>
 
@@ -14,13 +14,13 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <%= image_tag "1-1.jpg", class: "carousel-image" %>
+        <%= image_tag "http://s3.amazonaws.com/digitaltrends-uploads-prod/2016/04/HLD-Header.jpg", class: "carousel-image" %>
       </div>
       <div class="item">
-        <%= image_tag "1-2.jpg", class: "carousel-image" %>
+        <%= image_tag "http://blogs-images.forbes.com/erikkain/files/2016/01/February-Indie-Games-1200x676.jpg", class: "carousel-image" %>
       </div>
       <div class="item">
-        <%= image_tag "1-3.jpg", class: "carousel-image" %>
+        <%= image_tag "http://cdn.wccftech.com/wp-content/uploads/2016/01/Deaths-Gambit.jpg", class: "carousel-image" %>
       </div>
     </div>
   </div>
@@ -44,6 +44,7 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2602.8146115334225!2d-123.12360358469927!3d49.279909979330995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486717e2b2312ad%3A0x6e114250e5ff0091!2sMovieland+Arcade!5e0!3m2!1sen!2sca!4v1473538365086" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 
+<!-- Social Media -->
 <div class = "home-social-media">
-  FACEBOOK AND SHIT
+  FACEBOOK AND SHIT THAT JOE HAS DONE
 </div>
