--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <div id="logo-container">
-                        <a class="navbar-brand" href="<%= root_path %>">
+                        <a class="navbar-left" href="<%= root_path %>">
                             <%= image_tag "logo.png" %>
                         </a>
                     </div>
@@ -60,8 +60,24 @@
             </div>
             <!-- /.container-fluid -->
         </nav>
-<!-- FOOOTER -->
+<!-- End of NAVBAR -->
+
         <%= yield %>
+
+<!-- Footer -->
+    <hr>
+    <div class = "home-footer">
+        <div class = "home-footer-left">
+        <%= image_tag "logo.png" %>
+        <br>
+        ABOUT
+        <br>
+        Contact
+        <br>
+        FAQ
+        </div>
+
+    </div>
 
     </body>
 </html>
