--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,10 +1,9 @@
 
 <!-- ADMIN VIEW -->
 <%# If current user is an admin show this via authorizations %>
-<% if false %>
+<% if user_signed_in? && current_user.admin %>
   <h2>List of Games to Approve</h2>
   <hr>
-
   <% games_for_review = Status.find_by_name("Under Review").games %>
   <% games_for_review.each do |game| %>
     <div>
@@ -14,7 +13,6 @@
     </div>
   <% end %>
 <% else %>
-
   <h1>All Games</h1>
   <!-- All games are contained in a div -->
   <div>
