--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,17 +36,20 @@
                             <a href="#">Games</a>
                         </li>
                         <% if user_signed_in? %>
-                        <li class="dropdown">
-                          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="color: white" aria-expanded="false"><span class="caret"></span>My Profile</a>
-                          <ul class="dropdown-menu">
-                            <!-- add stuff later. Need different menues for admin vs dev -->
-                            <li><%= link_to "Some Stuff", home_index_path %></li>
-                            <li><%= link_to "Sign Out", sessions_path, method: :delete %></li>
-                          </ul>
+                        <li>
+                            <a>Welcome, <%= current_user.company %></a>
                         </li>
+                          <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="color: white" aria-expanded="false"><span class="caret"></span>My Profile</a>
+                            <ul class="dropdown-menu">
+                              <!-- add stuff later. Need different menues for admin vs dev -->
+                              <li><%= link_to "Some Stuff", home_index_path %></li>
+                              <li><%= link_to "Sign Out", sessions_path, method: :delete %></li>
+                            </ul>
+                          </li>
                         <% else %>
-                        <li><%= link_to "Log-in", new_session_path %></li>
-                        <li><%= link_to "Register", new_user_path %></li>
+                          <li><%= link_to "Log-in", new_session_path %></li>
+                          <li><%= link_to "Register", new_user_path %></li>
                         <% end %>
 
                         <!-- PLACEHOLDER - BROWSE FOR GAMES -->
