End of Day2 Final Front End

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,8 +35,16 @@
     <br>
     <br>
     <div class="col-lg-8 col-lg-offset-2">
-      We provide arcades around Vancouver, the opportunity to try Indie games made locally in British Columbia. Game Developers will receieve all feedback from the public on our site!
+      We provide a unique and free gaming experience for arcades around Vancouver. This project showcases Indie games made locally in British Columbia to the general public. Our app will enable Game Developers to receieve diagnostics and reviews from the public after they play the game!
     </div>
+  </div>
+</div>
+
+<div class="home-map-intro">
+  <div class="container">
+    <span>
+      Check out the map to see the location of arcades and the games that are available.
+    </span>
   </div>
 </div>
 
@@ -45,6 +53,38 @@
 </div>
 
 <!-- Social Media -->
+
 <div class = "home-social-media">
-  FACEBOOK AND SHIT THAT JOE HAS DONE
+  <div class="container">
+    <div class="col-lg-12">
+      <h1>STAY CONNECTED</h1>
+        <div class="col-lg-8 col-lg-offset-2">
+            <ul class="list-inline text-center">
+                <li>
+                  <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                </li>
+                <li>
+                  <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                  </span>
+                </li>
+                <li>
+                  <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                  </span>
+                </li>
+                <li>
+                  <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                  </span>
+                </li>
+            </ul>
+        </div>
+      </div>
+    </div>
 </div>
