--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,8 @@
 body {
    margin-left: 0px;
    margin-right: 0px;
+   margin-bottom: 0px;
+   font-family: 'Prompt', sans-serif;
 }
 
 hr {
@@ -28,6 +30,13 @@ hr {
   margin-bottom: 0px;
 }
 
+a, a:visited {
+  color: white;
+}
+
+a:hover {
+  color: lightgrey;
+}
 // NAVBAR STYLING
 
 .container-fluid {
@@ -63,6 +72,38 @@ hr {
   line-height: 45px;
 }
 
+#search-wrapper {
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+  transition: top 0.3s;
+}
+
+#search-bar {
+   background-color: #4169ac;
+   border: none;
+   border-radius: 0px;
+   opacity: 0.95;
+   font-color: white;
+   height: 50px;
+}
+
+
+#search-bar::-webkit-input-placeholder {
+  color: white;
+  opacity: 0.5;
+}
+
+#search-wrapper input[type='text']:focus {
+  color: white;
+}
+
+.moved {
+  top: 50px !important;
+}
+
 // END NAVBAR SYLING
 
 // FOOTER
@@ -71,11 +112,14 @@ hr {
   height: 200px;
   width: 100%;
   overflow: hidden;
+  bottom: 0px;
+  left: 0px;
   background-color: #003c62;
   text-align: center;
   font-family: 'Prompt', sans-serif;
   color: white;
   font-size: 12px;
+  margin-bottom: 0px;
 }
 
 .home-footer-left div {
@@ -90,14 +134,16 @@ hr {
   float: left;
   text-align: left;
   margin-left: 40px;
-  width: 30%
+  width: 30%;
 }
 
 .home-footer-right {
   float: right;
   text-align: right;
   margin-right: 40px;
-  width: 30%
+  width: 30%;
+  font-size: 18px;
+  text-decoration: underline;
 }
 .codecore-logo{
   height: 50px;
