--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,23 +13,46 @@ line-height: 1;
 width: 100%;
 }
 
-.home-intro {
-  height: 400px;
-  width: 100%;
-  overflow: hidden;
-  background-image: url("2.jpg");
-  text-align: center;
-  font-family: 'Prompt', sans-serif;
-  color: white;
-  font-size: 20px;
-}
-
-.navbar {
-  margin-bottom: 0px;
-}
 
 img.carousel-inner  {
   width: 100%;
 }
 
 // END CAROUSEL CSS
+
+.home-intro {
+  height: 300px;
+  width: 100%;
+  overflow: hidden;
+  background-image: url("2.jpg");
+  background-size: cover;
+  text-align: center;
+  color: white;
+  font-size: 18px;
+  text-shadow: 3px 3px 0px #000;
+}
+
+.home-intro h1 {
+  font-size: 36px;
+  font-weight: bold;
+  font-family: 'Audiowide', cursive;
+}
+
+.home-map-intro {
+  min-height: 50px;
+  text-align: center;
+  font-size: 20px;
+  font-style: italic;
+}
+
+.home-map-intro div {
+  margin-top: 25px;
+}
+
+.home-social-media {
+  margin-top: -5px;
+ height: auto;
+ text-align: center;
+ background-image: url("4.png");
+ background-repeat: repeat;
+ }
