--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
         <title>IndieArcade</title>
         <%= csrf_meta_tags %>
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-        <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
         <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
     </head>
 
     <body>
@@ -33,28 +33,23 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="#">Games</a>
+                            <%= link_to "Games", root_path %>
                         </li>
                         <li>
-                            <a href="#">Log-in</a>
+                            <%= link_to "Log-in", root_path %>
                         </li>
                         <li>
-                            <a href="#">Register</a>
+                            <%= link_to "Register", root_path %>
                         </li>
                         <!-- PLACEHOLDER - BROWSE FOR GAMES -->
                         <li class="game-search">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-search"></span>
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                                <span class="glyphicon glyphicon-search" id="search"></span>
                             </a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Search">
-                                    </div>
-                                    <button type="submit" class="btn btn-default">Submit</button>
-                                </li>
-
-                            </ul>
+                            <form id="search-wrapper">
+                                <input type="text" class="form-control" placeholder="Search for a game or a studio" id="search-bar">
+                                <button type="submit" class="btn btn-default" style="display: none">Submit</button>
+                            </form>
                         </li>
                     </ul>
                 </div>
@@ -66,21 +61,24 @@
 
         <%= yield %>
 
+        <hr style="margin-top:0px;">
+
         <!-- Footer -->
-        <hr>
         <div class="home-footer">
             <div class="home-footer-left">
                 <div><%= image_tag "logo.png" %></div>
-                <div>ABOUT</div>
-                <div>CONTACT</div>
-                <div>FAQ</div>
+                <div><%= link_to "About", root_path %></div>
+                <div><%= link_to "Contact", root_path %></div>
+                <div><%= link_to "FAQ", root_path %></div>
             </div>
 
             <div class="home-footer-right">
                 <div>WEBSITE MADE BY:</div>
-                <div><%= image_tag "codecore-logo.png", class: "codecore-logo" %></div>
                 <div><%= image_tag "json-squad-logo.png", class: "json-logo" %></div>
+                <div><%= image_tag "codecore-logo.png", class: "codecore-logo" %></div>
             </div>
+        </div>
 
-    </body>
-</html>
+        </body>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    </html>
