--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,11 +16,15 @@
  //= require chosen-compass
  //= require_tree .
  //= require_self
- 
+
 // NAVBAR STYLING
 
 .nav.navbar-nav.navbar-right {
   margin-right: 30px;
+}
+
+#nav-wrapper {
+  border-bottom: 4px solid #EF7030;
 }
 
 .nav.navbar-nav.navbar-right a {
@@ -30,11 +34,11 @@
    color: lightgrey;
 }
 
-hr {
-  height: 50px;
-  background-color: orange;
-  margin-bottom: 0px;
-}
+// hr {
+//   height: 50px;
+//   background-color: orange;
+//   margin-bottom: 0px;
+// }
 .navbar.navbar-default.navbar-fixed-top {
     border-bottom-width: 0px;
   }
@@ -69,4 +73,37 @@ hr {
 
 img.carousel-inner  {
   width: 100%;
+}
+
+
+#search-wrapper {
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+  transition: top 0.3s;
+}
+
+#search-bar {
+   background-color: #4169ac;
+   border: none;
+   border-radius: 0px;
+   opacity: 0.95;
+   font-color: white;
+   height: 66px;
+}
+
+
+#search-bar::-webkit-input-placeholder {
+  color: white;
+  opacity: 0.5;
+}
+
+#search-wrapper input[type='text']:focus {
+  color: white;
+}
+
+.moved {
+  top: 66px !important;
 }
