--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
         <!-- NAV BAR -->
         <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
+            <div class="container-fluid" id="nav-wrapper">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -43,16 +43,11 @@
                         </li>
                         <!-- PLACEHOLDER - BROWSE FOR GAMES -->
                         <li class="game-search">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-search"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Search">
-                                    </div>
-                                    <button type="submit" class="btn btn-default">Submit</button>
-                                </li>
-
-                            </ul>
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-search" id="search"></span></a>
+                            <form id="search-wrapper" >
+                              <input type="text" class="form-control" placeholder="Search for a game or a studio" id="search-bar">
+                              <button type="submit" class="btn btn-default" style="display: none">Submit</button>
+                            </form>
                         </li>
                     </ul>
                 </div>
