--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,3 +1,4 @@
+<!-- DEVS GAME UPLOAD PAGE -->
 <p>
   Note: Game must meet the following minimum hardware specs. Every
   game will be tested. If it cannot be run, it will be rejected.
