--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,8 +41,8 @@
                         </li>
                         <li>
                             <%= link_to "Register", root_path %>
-                            <a>Welcome, <%= current_user.company %></a>
                         </li>
+                        <li><a>Welcome, <%= current_user.company %></a></li>
                           <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="color: white" aria-expanded="false"><span class="caret"></span>My Profile</a>
                             <ul class="dropdown-menu">
