--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,6 +1,6 @@
 <div>
   <h2><%= @game.title %></h2>
-  <div><%= image_tag @game.picture %></div>
+  <div><%= display_picture @game %></div>
   <div>
     <div>Made by: <%= @developer %></div>
     <div>Date: <%= @date %></div>
