--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 
     <body>
 
-        <!-- NAV BAR -->
+        <!-- NAV BAR FOR DEV-->
+      <% if user_is_gamer? %>
         <nav class="navbar navbar-custom navbar-fixed-top">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -75,7 +76,117 @@
             <!-- /.container-fluid -->
         </nav>
         <!-- End of NAVBAR -->
+        <!-- NAV BAR FOR ADMIN-->
+      <% end %>
+      <% if user_is_dev? %>
+        <nav class="navbar navbar-custom navbar-fixed-top">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <div id="logo-container">
+                        <a class="navbar-left" href="<%= root_path %>">
+                            <%= image_tag "logo.png" %>
+                        </a>
+                    </div>
+                </div>
 
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <%= link_to "Games", root_path %>
+                        </li>
+                        <li>
+                          <a>Welcome, <%= current_user.company %></a>
+                        </li>
+                          <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="color: white" aria-expanded="false"><span class="caret"></span>My Profile</a>
+                            <ul class="dropdown-menu">
+                              <!-- add stuff later. Need different menues for admin vs dev -->
+                              <li><%= link_to "Some Stuff", home_index_path %></li>
+                              <li><%= link_to "Sign Out", sessions_path, method: :delete %></li>
+                            </ul>
+                          </li>
+                        <!-- PLACEHOLDER - BROWSE FOR GAMES -->
+                        <li class="game-search">
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                                <span class="glyphicon glyphicon-search" id="search"></span>
+                            </a>
+                            <form id="search-wrapper">
+                                <input type="text" class="form-control" placeholder="Search for a game or a studio" id="search-bar">
+                                <button type="submit" class="btn btn-default" style="display: none">Submit</button>
+                            </form>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container-fluid -->
+        </nav>
+        <!-- End of NAVBAR -->
+        <!-- NAV BAR FOR GAMERS-->
+      <% end %>
+      <% if user_is_admin? %>
+        <nav class="navbar navbar-custom navbar-fixed-top">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <div id="logo-container">
+                        <a class="navbar-left" href="<%= root_path %>">
+                            <%= image_tag "logo.png" %>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <%= link_to "Games", root_path %>
+                        </li>
+                        <li>
+                          <a>Welcome, <%= current_user.company %></a>
+                        </li>
+                          <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" style="color: white" aria-expanded="false"><span class="caret"></span>My Profile</a>
+                            <ul class="dropdown-menu">
+                              <!-- add stuff later. Need different menues for admin vs dev -->
+                              <li><%= link_to "Review Games", games_path %></li>
+                              <li><%= link_to "Sign Out", sessions_path, method: :delete %></li>
+                            </ul>
+                          </li>
+                        <!-- PLACEHOLDER - BROWSE FOR GAMES -->
+                        <li class="game-search">
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                                <span class="glyphicon glyphicon-search" id="search"></span>
+                            </a>
+                            <form id="search-wrapper">
+                                <input type="text" class="form-control" placeholder="Search for a game or a studio" id="search-bar">
+                                <button type="submit" class="btn btn-default" style="display: none">Submit</button>
+                            </form>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container-fluid -->
+        </nav>
+        <!-- End of NAVBAR -->
+      <% end %>
         <div style="margin-top: 50px;">
           <%= yield %>
         </div>
