Added the ability to search games and developer by string

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -16,7 +16,7 @@
   </div>
 
 
-  <% if current_user.admin %>
+  <% if user_signed_in? && current_user.admin? %>
     <div>
       Send email to developer about the game:
       <%#= input type = "text-field" %>
