--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -22,27 +22,21 @@
     <% @games.each do |g|  %>
     <!-- Each game is in a div  -->
       <div>
-        <h2><%= g.title %></h2>
-        <p><%= g.user.company %></p>
-        <p><%= g.tags.map {|t| t.name}.join(", ") %></p>
-        <hr>
-      </div>
+          <h2><%= link_to g.title, game_path(g) %></h2>
+          <p><%= link_to g.user.company, game_path(g) %></p>
+          <p><%= g.tags.map {|t| t.name}.join(", ") %></p>
+          <hr>
+        </div>
     </div>
     <% end %>
   <% else %>
-    <p>There are no matches for <%= params[:search] %></p>
+    <p>There are no matches for your search</p>
   <% end %>
 <% end %>
 
 <%= form_tag(games_path, :method => 'get', id: 'tags') do %>
-
-  <% @tags.each do |t| %>
-     <p>
-       <%= check_box_tag(t.id) %>
-       <%= label_tag(t.id, "#{t.name}") %>
-     </p>
-     <% end %>
-     <%= submit_tag :search %>
+  <%= collection_check_boxes(:tag, :tag_ids, @tags, :id, :name, include_hidden: false) %>
+  <%= submit_tag :search %>
 <% end %>
   <!-- Bar used bay users to search for gams by developer. All developers that include the entered string will be returned. -->
 
