--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
 
                         <!-- PLACEHOLDER - BROWSE FOR GAMES -->
                         <li class="game-search">
-                            <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                            <a href="/" class="dropdown-toggle" data-toggle="dropdown">
                                 <span class="glyphicon glyphicon-search" id="search"></span>
                             </a>
                             <form id="search-wrapper">
