Pulling integration into contact

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,7 +85,7 @@
             <div class="home-footer-left">
                 <div><%= image_tag "logo.png" %></div>
                 <div><%= link_to "About", root_path %></div>
-                <div><%= link_to "Contact", root_path %></div>
+                <div><%= link_to "Contact", contact_path %></div>
                 <div><%= link_to "FAQ", root_path %></div>
             </div>
 
