--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -56,3 +56,63 @@ img.carousel-inner  {
  background-image: url("4.png");
  background-repeat: repeat;
  }
+
+// Contact
+#contactheader{
+  text-align: center;
+  font-size: 30px;
+}
+
+#hrcontact{
+  height: 3px;
+  background-color: grey;
+}
+
+#contactbody{
+  background-image: url("contact-bg.jpg");
+  background-size: cover;
+  font-size: 18px;
+  color: white;
+}
+
+#contactemail{
+  float: left;
+  text-align: left;
+  margin-left: 40px;
+  width: 30%;
+}
+
+#contactphone{
+  float: left;
+  text-align: left;
+  margin-left: 40px;
+}
+
+#contacthours{
+  float: left;
+  text-align: left;
+  margin-left: 40px;
+  font-size: 18px;
+}
+
+#leavemess{
+  text-align: center;
+}
+.form-control1{
+  opacity: 0.5;
+}
+
+.form-group1{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.btn-default {
+  color: #fff;
+  background-color: #EF7030;
+  border-color: #EF7030;
+}
+
+.btn{
+  width: 100%;
+}
