--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
         </nav>
         <!-- End of NAVBAR -->
 
-        <div style="margin-top: 50px;">
+        <div style="margin-top: 50px; min-height: 450px;">
           <%= yield %>
         </div>
 
