--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -90,10 +90,12 @@ img.carousel-inner {
 #about-text {
   width: 80%;
   margin: auto;
+  line-height: 40px;
+  text-align: center;
 }
 
 #team-background {
-  height: 500px;
+  padding-bottom: 40px;
   width: 100%;
   background-image: url('noise_pattern.png');
   text-align: center;
@@ -102,6 +104,7 @@ img.carousel-inner {
 #team-text {
   color: #003C62;
   padding: 50px 0;
+  font-family: Audiowide;
 }
 
 
