--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -17,7 +17,7 @@
 
   <h1>All Games</h1>
   <!-- All games are contained in a div -->
-  <div>
+  <div style="min-height:500px;">
   <% if @games.present? %>
     <% @games.each do |g|  %>
     <!-- Each game is in a div  -->
