--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,10 +26,8 @@ body {
    font-size: 12px;
 }
 
-hr {
-  height: 6px;
-  background-color: #EF7030;
-  margin-bottom: 0px;
+.home-footer {
+  border-top: 4px solid #EF7030;
 }
 
 #nav-wrapper {
