--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -7,37 +7,14 @@
   <%= render 'index_dev' %>
 <!-- GAMER VIEW -->
 <% else %>
-
-  <h1>All Games</h1>
-  <!-- All games are contained in a div -->
-  <div>
-  <% if @games.present? %>
-    <% @games.each do |g|  %>
-    <!-- Each game is in a div  -->
-      <div>
-          <h2><%= link_to g.title, game_path(g) %></h2>
-          <p><%= link_to g.user.company, game_path(g) %></p>
-          <p><%= g.tags.map {|t| t.name}.join(", ") %></p>
-          <hr>
-        </div>
-    </div>
-    <% end %>
-  <% else %>
-    <p>There are no matches for your search</p>
-  <% end %>
-<% end %>
-
-<%= form_tag(games_path, :method => 'get', id: 'tags') do %>
-  <%= collection_check_boxes(:tag, :tag_ids, @tags, :id, :name, include_hidden: false) %>
-  <%= submit_tag :search %>
   <%= render 'index_gamer' %>
 <% end %>
   <!-- Bar used bay users to search for gams by developer. All developers that include the entered string will be returned. -->
 
 <%= form_tag(games_path, :method => 'get', id: 'search-form') do %>
   <div>
-    <%= label_tag :search_user %>
-    <%= text_field_tag :search_user, [:search_user], placeholder: 'Search' %>
-    <%= submit_tag :search %>
+    <%= label_tag :search_by_user %>
+    <%= text_field_tag :search_user, [:search_user] %>
+    <%= submit_tag :search_user %>
   </div>
 <% end %>
