--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,8 +59,8 @@
                             <a href="/" class="dropdown-toggle" data-toggle="dropdown">
                                 <span class="glyphicon glyphicon-search" id="search"></span>
                             </a>
-                            <form id="search-wrapper">
-                                <input type="text" class="form-control" name="search" placeholder="Search for a game or a studio" id="search-bar">
+                            <form id="search-wrapper" method="post"  action="/games">
+                                <input type="text" class="form-control" name="search-bar" placeholder="Search for a game or a studio" id="search">
                                 <button type="submit" class="btn btn-default" style="display: none">Submit</button>
                             </form>
                         </li>
