--- a/app/views/faq/index.html.erb
+++ b/app/views/faq/index.html.erb
@@ -4,50 +4,41 @@
   <h1>FAQ/Help (gamers)</h1>
 
   FAQ
-    For Arcade Players
-    <h3>Arcades</h3>
-  <ul class="row">
+  For Arcade Players
+  <h3>Arcades</h3>
+
+        <button class="accordion">Where Can I find the nearst Indie Arcade?</button>
+        <div class="panel">
+          <p>Lorem ipsum..</p>
+        </div>
+
+        <button class="accordion">Where is the link to buy the game?</button>
+        <div class="panel">
+          <p>Lorem ipsum...</p>
+        </div>
+
+  Developers
+  <ul>
     <div id="question" class="col-md-3">
 
-       <li>
-       <button class="accordion">Where Can I find the nearst Indie Arcade?</button>
-       <div class="panel">
-         <p>Lorem ipsum...</p>
-       </div>
-       </li>
-      <li>
-      <button class="accordion">Where is the link to buy the game?</button>
-      <div class="panel">
-        <p>Lorem ipsum...</p>
-      </div>
-        </li>
-      <li>...</li>
-
+      <li><a href="#UploadingGame"> I can't upload my game </a></li>
+      <li><a href="#MyGameDoesNotUpload"> Help! My game doesn't upload! </a></li>
     </div>
+
   </ul>
 
-    Developers
-    <ul>
-      <div id="question" class="col-md-3">
-
-       <li><a href="#UploadingGame"> I can't upload my game </a></li>
-       <li><a href="#MyGameDoesNotUpload"> Help! My game doesn't upload! </a></li>
-      </div>
-
-    </ul>
 
 
 
+  <button class="accordion">I can't upload my game</button>
+  <div class="panel">
+    <p>Lorem ipsum...</p>
+  </div>
 
-              <button class="accordion">I can't upload my game</button>
-              <div class="panel">
-                <p>Lorem ipsum...</p>
-              </div>
-
-              <button class="accordion">Help! My game doesn't upload!</button>
-              <div class="panel">
-                <p>Lorem ipsum...</p>
-              </div>
-<br>
+  <button class="accordion">Help! My game doesn't upload!</button>
+  <div class="panel">
+    <p>Lorem ipsum...</p>
+  </div>
+  <br>
 
 </div>
