--- a/app/views/games/_index_admin.html.erb
+++ b/app/views/games/_index_admin.html.erb
@@ -1,6 +1,6 @@
 <h2>List of Games to Approve</h2>
 <hr>
-<% games_for_review = Status.find_by_name("Under Review").games %>
+<% games_for_review = Status.find_by_name("Game under review").games %>
 <% games_for_review.each do |game| %>
   <div>
     <div><%= link_to game.title, game_path(game)%></div>
