--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,38 +1,51 @@
-<h1>Game Title: <%= @game.title %></h1>
 
+<div id="developer-page-wrapper">
+  <div class='col-xs-4'>
+    <div id="dev-logo" style="background-image: url('<%= @user.logo %>')"></div>
+    <h4>
+      <strong>Company:</strong>
+      <%= @user.company %>
+    </h4>
 
-<div class="container">
+    <h4>
+      <strong>Email:</strong>
+      <%= @user.email %>
+    </h4>
 
-  <h3>General Ratings: <%= @reviews.count %> feedbacks</h3>
+    <h4>
+      <strong>Employees:</strong>
+      <%= @user.employees %>
+    </h4>
 
-  <!-- change path to download action in game controller -->
-  <%= link_to 'download pdf', game_review_path %>
+    <h4>
+      <strong>Genres:</strong>
+      <%= @user.genres %>
+    </h4>
 
-  <div style="text-align: center"><h4>Overview</h4></div>
-  <h3>Fun</h3>
-  <div class="progress">
-    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow=""
-    aria-valuemin="0" aria-valuemax="100" style="width:<%= @fun * 20 %>%">
-      <%= @fun * 20 %>%
-    </div>
+    <h4>
+      <strong>Website:</strong>
+      <%= @user.website %>
+    </h4>
+
+    <h4>
+      <strong>Twitter:</strong>
+      <%= @user.twitter %>
+    </h4>
+  </div>
+  <div class="col-xs-8">
+    <% @games.each do |game| %>
+      <div class="row" style="text-align: center">
+        <h1><%= game.title %></h1>
+        <div class="col-xs-4">
+          <div id="game-picture" style="background-image: url('<%= game.picture %>')"></div>
+            </div>
+        <div class="col-xs-8" style="text-align: center">
+          <h2><%= game.description %></h2>
+        </div>
+      </div>
+      <hr>
+    <% end %>
   </div>
 
-  <h3>Playability</h3>
-  <div class="progress">
-    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow=""
-    aria-valuemin="0" aria-valuemax="100" style="width:<%= @playability * 20 %>%">
-      <%= @playability * 20 %>%
-    </div>
-  </div>
 
-  <h3>Difficulty</h3>
-  <div class="progress">
-    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
-    aria-valuemin="0" aria-valuemax="100" style="width:<%= @difficulty * 20 %>%">
-      <%= @difficulty * 20 %>%
-    </div>
-  </div>
 </div>
-
-<!-- Crash logs don't exist so we just have an empty link -->
-<a href="#">Download crash logs</a>
